--- a/android/Finder/app/src/main/res/values/strings.xml
+++ b/android/Finder/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_bluetooth_seeker">BluetoothSeeker</string>
+    <string name="APP_ID">1082985398383343</string>
 
 </resources>
